--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -50,6 +50,6 @@
         app:popExitAnim="@anim/slide_out_right" >
         <argument
             android:name="article"
-            app:argType="com.androiddevs.mvvmnewsapp.models.Article" />
+            app:argType="com.androiddevs.mvvmnewsapp.responses.Article" />
     </fragment>
 </navigation>
